--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>{%trans 'W' %}</b>{%trans 'T' %}</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>{%trans 'web' %}</b>{%trans 'terminal' %}</span>
+      <span class="logo-lg">MaxiCoffee - Bastion</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
