--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="{% static "img/user1.jpg" %}" class="img-circle" alt="User Image">
+                <img src="https://www.maxicoffee.com/charte/elements/logo/MaxiCoffee_Monogramme-seul-RVB.png" class="img-circle" alt="User Image" width=32>
                 <p>
                   {% if request.user %}{{request.user}}{% else %}{{user}}{% endif %}
                 </p>
