--- a/templates/base.html
+++ b/templates/base.html
@@ -155,7 +155,7 @@
     <div class="pull-right hidden-xs">
       <b>{%trans 'Version' %}</b> 0.1
     </div>
-    <strong>{%trans 'Copyright &copy; 2016-2020' %} <a href="https://github.com/jimmy201602/webterminal">{%trans 'webterminal' %}</a></strong> {%trans 'All rights reserved.' %}
+    <strong>Bastion forked from webterminal - Maxicoffee</strong>
   </footer>
 
 
