--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <!-- Logo -->
     <a href="{%url 'index' %}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>{%trans 'W' %}</b>{%trans 'T' %}</span>
+      <span class="logo-mini"><b>M</b>C</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg">MaxiCoffee - Bastion</span>
     </a>
