--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -4,7 +4,7 @@
 {%load i18n%}
 <head>
     <meta charset="UTF-8">
-    <title>{% trans 'Webterminal Login' %}</title>
+    <title>MaxiCoffee Bastion</title>
     {% if otp_is_open %}
     <style>
         .stark-login form {
@@ -17,7 +17,7 @@
 
 <body>
 <div id="logo">
-    <h1><i> WEBTERMINAL</i></h1>
+    <img src="{% static 'img/logomc_grand.png' %}" height="100%" width="100%"/>
 </div>
 
 <section class="stark-login">
