--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -17,7 +17,7 @@
 
 <body>
 <div id="logo">
-    <h1><i>Bastion - MC</i></h1>
+    <h1><i>Bastion</i></h1>
 </div>
 
 <section class="stark-login">
@@ -70,7 +70,7 @@
 </div>
 
 <div class="hexagons">
-        <img src="{% static 'img/logomc_grand.png' %}" height="100%" width="100%"/>
+        <img src="{% static 'img/backgroud.jpg' %}" height="100%" width="100%"/>
     </div>
 </section>
 
