--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -4,7 +4,7 @@
 {%load i18n%}
 <head>
     <meta charset="UTF-8">
-    <title>MaxiCoffee Bastion</title>
+    <title>Login</title>
     {% if otp_is_open %}
     <style>
         .stark-login form {
@@ -17,7 +17,7 @@
 
 <body>
 <div id="logo">
-    <h1><i>Bastion</i></h1>
+    <h1><i> Bastion</i></h1>
 </div>
 
 <section class="stark-login">
