--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -63,7 +63,7 @@
                 </option>
                 {% endfor %}
             </select>
-<a href="{%url 'password-reset' %}">{% trans "Forgot Password" %}</a>
+<!--<a href="{%url 'password-reset' %}">{% trans "Forgot Password" %}</a>-->
 </form>
 
 </div>
